# computational-geometry

./: README.md  pyproject.toml  test_cli.py  test_objects.py
.github/workflows/: test.yml
computational_geometry/: cli.py  objects.py
