[tool.poetry]
name = "computational-geometry"
version = "0.0.1"
authors = ["F23-S24_WMU_Senior_Design Team_#5 <example@example.com>"]
description = "Computational Geometry practice project"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
